Tue Jan  1 02:16:48 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* Makefile.in (fake.rb): set RUBY_VERSION.

Mon Dec 31 14:20:46 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (yycompile): always store copy of filename.

	* parse.y (rb_compile_file): no longer need to strdup() here.

Sun Dec 30 18:04:07 2001  Tanaka Akira  <akr@m17n.org>

	* time.c (time_utc_offset): new function.

	* time.c (Init_Time): new method gmtoff, gmt_offset and utc_offset.

	* lib/time.rb: new file.

Sun Dec 30 00:59:16 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in, lib/mkmf.rb (have_library): accept -lm
	  unconditionally on mswin32/mingw32.

Thu Dec 27 18:43:04 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* bignum.c (rb_cstr2inum): deny "0_".

Thu Dec 27 01:54:02 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* bignum.c (rb_cstr2inum): allow "0\n" and so on.

Tue Dec 25 23:28:47 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.6 released.

Tue Dec 25 18:32:16 2001  K.Kosako  <kosako@sofnec.co.jp>

	* re.c (rb_reg_search): initialize taint status of match object.

Fri Dec 21 20:33:34 2001  K.Kosako  <kosako@sofnec.co.jp>

	* parse.y (str_extend): make up "#$;" handling.

Fri Dec 21 16:18:17 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* dln.h, ruby.h, util.h: enable prototypes in C++.

Fri Dec 21 03:15:52 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_mod_define_method): must not convert Method to Proc.

Fri Dec 21 01:17:57 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb (with_destdir): new.

	* lib/mkmf.rb: prefix target directories with $(DESTDIR) all.

	* lib/mkmf.rb: no need to mkdir $(libdir)

Thu Dec 20 13:51:52 2001  K.Kosako  <kosako@sofnec.co.jp>

	* variable.c (rb_cvar_set): add frozen class/module check.

	* variable.c (rb_cvar_declare): add frozen class/module check.

Thu Dec 20 10:37:32 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
